--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dojo</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <section class="canvas-container">
@@ -17,11 +17,11 @@
       </div>
     </section>
     <div class="backgrounds">
-      <img id="p1" src="./spritesheet/background/plx-1.png" />
-      <img id="p2" src="./spritesheet/background/plx-2.png" />
-      <img id="p3" src="./spritesheet/background/plx-3.png" />
-      <img id="p4" src="./spritesheet/background/plx-4.png" />
-      <img id="p5" src="./spritesheet/background/plx-5.png" />
+      <img id="p1" src="spritesheet/background/plx-1.png" />
+      <img id="p2" src="spritesheet/background/plx-2.png" />
+      <img id="p3" src="spritesheet/background/plx-3.png" />
+      <img id="p4" src="spritesheet/background/plx-4.png" />
+      <img id="p5" src="spritesheet/background/plx-5.png" />
     </div>
     <section id="works-cited">
       <h2>Works Cited</h2>
