--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="js/classes/Player.js"></script>
     <script src="js/classes/Platform.js"></script>
     <script src="js/classes/Background.js"></script>
+    <script src="js/initializeObjects.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
