--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <header>
+      <h1>Wayward Witch</h1>
+      <p>A simple platformer game</p>
+    </header>
     <section class="canvas-container">
       <canvas id="canvas"></canvas>
       <div class="overlay">
