--- a/index.html
+++ b/index.html
@@ -10,39 +10,40 @@
   <body>
     <header>
       <h1>Wayward Witch</h1>
-      <p>A simple platformer game</p>
+      <h2>A simple platformer game</h2>
     </header>
-    <section class="canvas-container">
-      <canvas id="canvas"></canvas>
-      <div class="overlay">
-        <h2>You Died</h2>
-        <p>Go to the writing center</p>
-        <button onclick="window.location.reload()">Replay</button>
-      </div>
+    <section class="instructions-container">
+      <section class="game-objective">
+        <h2>Objective</h2>
+        <p>Get to the blood moon tower!</p>
+        <img src="spritesheet/blood-moon-tower.gif" />
+        <p>Dont fall! You will die!</p>
+        <p>Kill or avoid Reapers!</p>
+      </section>
+      <section class="movement-controls">
+        <div class="w">
+          <div class="key">W</div>
+          <p>Jump</p>
+          <p>Hint: To achieve longest jump, press W <br> after running off platform</p>
+        </div>
+        <div class="a">
+          <div class="key">A</div>
+          <p>Move left</p>
+        </div>
+        <div class="d">
+          <div class="key">D</div>
+          <p>Move left</p>
+        </div>
+        <div class="space">
+            <div class="space-bar">Space</div>
+            <p>Attack</p>
+            <p>Hint: To attack, hold space until spikes appear!</p>
+        </div>
+      </section>
+      <section class="start-game-container">
+        <a href="game.html"><button>Play Game</button></a>
+      </section>
+      <div class="enemy-controls"></div>
     </section>
-    <div class="backgrounds">
-      <img id="p1" src="spritesheet/background/plx-1.png" />
-      <img id="p2" src="spritesheet/background/plx-2.png" />
-      <img id="p3" src="spritesheet/background/plx-3.png" />
-      <img id="p4" src="spritesheet/background/plx-4.png" />
-      <img id="p5" src="spritesheet/background/plx-5.png" />
-    </div>
-    <section id="works-cited">
-      <h2>Works Cited</h2>
-      <ul>
-        <li>
-          <h3>
-            <a href="https://jesse-m.itch.io/jungle-pack">Background Images</a>
-          </h3>
-        </li>
-      </ul>
-    </section>
-    <!-- <script src="js/preloader.js"></script> -->
-    <script src="js/physics.js"></script>
-    <script src="js/classes/Player.js"></script>
-    <script src="js/classes/Platform.js"></script>
-    <script src="js/classes/Background.js"></script>
-    <script src="js/initializeObjects.js"></script>
-    <script src="index.js"></script>
   </body>
 </html>
