upload missing files

--- a/index.html
+++ b/index.html
@@ -45,5 +45,29 @@
       </section>
       <div class="enemy-controls"></div>
     </section>
+    <section id="works-cited">
+      <h2>Works Cited</h2>
+      <ul>
+        <li>
+          <a href="https://jesse-m.itch.io/jungle-pack">Background Images</a>
+        </li>
+        <li>
+          <a href="https://creativekind.itch.io/gif-bloodmoon-tower-free"
+            >Blood Moon Tower</a
+          >
+        </li>
+        <li>
+          <a href="https://darkpixel-kronovi.itch.io/undead-executioner"
+            >Reapers</a
+          >
+        </li>
+        <li>
+          <a href="https://brullov.itch.io/oak-woods">Platforms</a>
+        </li>
+        <li>
+          <a href="https://9e0.itch.io/witches-pack">Witch</a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
