add sounds to game

--- a/game.html
+++ b/game.html
@@ -49,8 +49,24 @@
         <li>
           <a href="https://9e0.itch.io/witches-pack">Witch</a>
         </li>
+        <li>
+          <a
+            href="https://gamesupply.itch.io/1000-nintendo-sound-effects/download/eyJleHBpcmVzIjoxNjcwMTI5MDQzLCJpZCI6NTIwMTE0fQ%3d%3d.T5bgOgyFAyEsl5o6msoRVpoHxU0%3d"
+            >Sound Effects</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://soundcloud.com/maplestory-2/maple-story-music-kerning-city"
+            >Sound Effects</a
+          >
+        </li>
       </ul>
     </section>
+    <audio autoplay loop>
+      <source src="audio/kerning_city_theme.mp3" type="audio/mp3"/>
+      Your browser does not support the audio tag.
+    </audio>
     <!-- <script src="js/preloader.js"></script> -->
     <script src="js/physics.js"></script>
     <script src="js/classes/Player.js"></script>
