complete game sound design/needs to be styled

--- a/game.html
+++ b/game.html
@@ -17,7 +17,9 @@
       <div class="overlay">
         <h2>You Died</h2>
         <p>Go to the writing center</p>
-        <button onclick="window.location.reload()">Replay</button>
+        <button class="button" onclick="window.location.reload()">
+          Replay
+        </button>
       </div>
     </section>
     <div class="backgrounds">
@@ -29,45 +31,97 @@
     </div>
     <section id="works-cited">
       <h2>Works Cited</h2>
-      <ul>
-        <li>
-          <a href="https://jesse-m.itch.io/jungle-pack">Background Images</a>
-        </li>
-        <li>
-          <a href="https://creativekind.itch.io/gif-bloodmoon-tower-free"
-            >Blood Moon Tower</a
-          >
-        </li>
-        <li>
-          <a href="https://darkpixel-kronovi.itch.io/undead-executioner"
-            >Reapers</a
-          >
-        </li>
-        <li>
-          <a href="https://brullov.itch.io/oak-woods">Platforms</a>
-        </li>
-        <li>
-          <a href="https://9e0.itch.io/witches-pack">Witch</a>
-        </li>
-        <li>
-          <a
-            href="https://gamesupply.itch.io/1000-nintendo-sound-effects/download/eyJleHBpcmVzIjoxNjcwMTI5MDQzLCJpZCI6NTIwMTE0fQ%3d%3d.T5bgOgyFAyEsl5o6msoRVpoHxU0%3d"
-            >Sound Effects</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://soundcloud.com/maplestory-2/maple-story-music-kerning-city"
-            >Sound Effects</a
-          >
-        </li>
-      </ul>
+      <section class="works-cited-section">
+        <h3>Game Assets</h3>
+        <ul>
+          <li>
+            Background Images |
+            <a target="_blank" href="https://jesse-m.itch.io/jungle-pack"
+              >jesse-m.itch.io/jungle-pack</a
+            >
+          </li>
+          <li>
+            Finish Line Sprites |
+            <a
+              target="_blank"
+              href="https://creativekind.itch.io/gif-bloodmoon-tower-free"
+              >creativekind.itch.io/gif-bloodmoon-tower</a
+            >
+          </li>
+          <li>
+            Reaper Sprites |
+            <a
+              target="_blank"
+              href="https://darkpixel-kronovi.itch.io/undead-executioner"
+              >darkpixel-kronovi.itch.io/undead-executioner</a
+            >
+          </li>
+          <li>
+            Platform Images |
+            <a target="_blank" href="https://brullov.itch.io/oak-woods"
+              >brullov.itch.io/oak-woods</a
+            >
+          </li>
+          <li>
+            Witch Sprites |
+            <a target="_blank" href="https://9e0.itch.io/witches-pack"
+              >9e0.itch.io/witches-pack</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="works-cited-section">
+        <h3>Sounds</h3>
+        <ul>
+          <li>
+            Sound Effects |
+            <a
+              target="_blank"
+              href="https://gamesupply.itch.io/1000-nintendo-sound-effects/download/eyJleHBpcmVzIjoxNjcwMTI5MDQzLCJpZCI6NTIwMTE0fQ%3d%3d.T5bgOgyFAyEsl5o6msoRVpoHxU0%3d"
+              >gamesupply.itch.io/1000-nintendo-sound-effects
+            </a>
+          </li>
+          <li>
+            Background Music |
+            <a
+              target="_blank"
+              href="https://soundcloud.com/maplestory-2/maple-story-music-kerning-city"
+              >soundcloud.com/maplestory-2/maple-story-music-kerning-city</a
+            >
+          </li>
+          <li>
+            Super Mario Death Sound |
+            <a
+              target="_blank"
+              href="https://djlunatique.com/super-mario-bros-death-sound-effect"
+              >djlunatique.com/super-mario-bros-death-sound-effect</a
+            >
+          </li>
+          <li>
+            Zelda Discovery Sound |
+            <a target="_blank" href="http://noproblo.dayjo.org/ZeldaSounds/"
+              >noproblo.dayjo.org/ZeldaSounds</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="works-cited-section">
+        <h3>Fonts</h3>
+        <ul>
+          <li>
+            Dark Souls Font |
+            <a href="https://www.downloadfonts.io/downloads/dark-souls/#google_vignette" target="_blank">www.downloadfonts.io/downloads/dark-souls/</a>
+          </li>
+        </ul>
+      </section>
     </section>
-    <audio autoplay loop>
-      <source src="audio/kerning_city_theme.mp3" type="audio/mp3"/>
+    <audio id="bg-music" autoplay loop>
+      <source src="audio/kerning_city_theme.mp3" type="audio/mp3" />
       Your browser does not support the audio tag.
     </audio>
     <!-- <script src="js/preloader.js"></script> -->
+
+    <script src="js/buttonSounds.js"></script>
     <script src="js/physics.js"></script>
     <script src="js/classes/Player.js"></script>
     <script src="js/classes/Platform.js"></script>
