--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <h1>Wayward Witch</h1>
-      <h2>A simple platformer game</h2>
+      <a href="index.html" class="header-link">
+        <h1>Wayward Witch</h1>
+        <h2>A simple platformer game</h2>
+      </a>
     </header>
     <section class="instructions-container">
       <section class="game-objective">
@@ -24,7 +26,10 @@
         <div class="w">
           <div class="key">W</div>
           <p>Jump</p>
-          <p>Hint: To achieve longest jump, press W <br> after running off platform</p>
+          <p>
+            Hint: To achieve longest jump, press W <br />
+            after running off platform
+          </p>
         </div>
         <div class="a">
           <div class="key">A</div>
@@ -35,39 +40,106 @@
           <p>Move left</p>
         </div>
         <div class="space">
-            <div class="space-bar">Space</div>
-            <p>Attack</p>
-            <p>Hint: To attack, hold space until spikes appear!</p>
+          <div class="space-bar">Space</div>
+          <p>Attack</p>
+          <p>Hint: To attack, hold space until spikes appear!</p>
         </div>
       </section>
       <section class="start-game-container">
-        <a href="game.html"><button>Play Game</button></a>
+        <a href="game.html"><button class="button">Play Game</button></a>
       </section>
       <div class="enemy-controls"></div>
     </section>
     <section id="works-cited">
       <h2>Works Cited</h2>
-      <ul>
-        <li>
-          <a href="https://jesse-m.itch.io/jungle-pack">Background Images</a>
-        </li>
-        <li>
-          <a href="https://creativekind.itch.io/gif-bloodmoon-tower-free"
-            >Blood Moon Tower</a
-          >
-        </li>
-        <li>
-          <a href="https://darkpixel-kronovi.itch.io/undead-executioner"
-            >Reapers</a
-          >
-        </li>
-        <li>
-          <a href="https://brullov.itch.io/oak-woods">Platforms</a>
-        </li>
-        <li>
-          <a href="https://9e0.itch.io/witches-pack">Witch</a>
-        </li>
-      </ul>
+      <section class="works-cited-section">
+        <h3>Game Assets</h3>
+        <ul>
+          <li>
+            Background Images |
+            <a target="_blank" href="https://jesse-m.itch.io/jungle-pack"
+              >jesse-m.itch.io/jungle-pack</a
+            >
+          </li>
+          <li>
+            Finish Line Sprites |
+            <a
+              target="_blank"
+              href="https://creativekind.itch.io/gif-bloodmoon-tower-free"
+              >creativekind.itch.io/gif-bloodmoon-tower</a
+            >
+          </li>
+          <li>
+            Reaper Sprites |
+            <a
+              target="_blank"
+              href="https://darkpixel-kronovi.itch.io/undead-executioner"
+              >darkpixel-kronovi.itch.io/undead-executioner</a
+            >
+          </li>
+          <li>
+            Platform Images |
+            <a target="_blank" href="https://brullov.itch.io/oak-woods"
+              >brullov.itch.io/oak-woods</a
+            >
+          </li>
+          <li>
+            Witch Sprites |
+            <a target="_blank" href="https://9e0.itch.io/witches-pack"
+              >9e0.itch.io/witches-pack</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="works-cited-section">
+        <h3>Sounds</h3>
+        <ul>
+          <li>
+            Sound Effects |
+            <a
+              target="_blank"
+              href="https://gamesupply.itch.io/1000-nintendo-sound-effects/download/eyJleHBpcmVzIjoxNjcwMTI5MDQzLCJpZCI6NTIwMTE0fQ%3d%3d.T5bgOgyFAyEsl5o6msoRVpoHxU0%3d"
+              >gamesupply.itch.io/1000-nintendo-sound-effects
+            </a>
+          </li>
+          <li>
+            Background Music |
+            <a
+              target="_blank"
+              href="https://soundcloud.com/maplestory-2/maple-story-music-kerning-city"
+              >soundcloud.com/maplestory-2/maple-story-music-kerning-city</a
+            >
+          </li>
+          <li>
+            Super Mario Death Sound |
+            <a
+              target="_blank"
+              href="https://djlunatique.com/super-mario-bros-death-sound-effect"
+              >djlunatique.com/super-mario-bros-death-sound-effect</a
+            >
+          </li>
+          <li>
+            Zelda Discovery Sound |
+            <a target="_blank" href="http://noproblo.dayjo.org/ZeldaSounds/"
+              >noproblo.dayjo.org/ZeldaSounds</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="works-cited-section">
+        <h3>Fonts</h3>
+        <ul>
+          <li>
+            Dark Souls Font |
+            <a
+              href="https://www.downloadfonts.io/downloads/dark-souls/#google_vignette"
+              target="_blank"
+              >www.downloadfonts.io/downloads/dark-souls/</a
+            >
+          </li>
+        </ul>
+      </section>
     </section>
+    <script src="js/buttonSounds.js"></script>
   </body>
 </html>
