set up fonts/finalize styling

--- a/game.html
+++ b/game.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <h1>Wayward Witch</h1>
-      <p>A simple platformer game</p>
+      <a href="index.html" class="header-link">
+        <h1>Wayward Witch</h1>
+        <h2>A simple platformer game</h2>
+      </a>
     </header>
     <section class="canvas-container">
       <canvas id="canvas"></canvas>
