--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="d">
           <div class="key">D</div>
-          <p>Move left</p>
+          <p>Move right</p>
         </div>
         <div class="space">
           <div class="space-bar">Space</div>
